fixed image visibilty issue and flamme issue

--- a/GAME/css/BK.css
+++ b/GAME/css/BK.css
@@ -1,3 +1,6 @@
+img {
+  display: none;
+}
 body {
   background-image: url("../images/BGF.jpg");   
   background-repeat: repeat-x;
@@ -5,14 +8,3 @@ body {
  
  
 }
-
-
-
-  
-  
-  canvas {
-   
-    
-  
-  
-  }
